<resources>
    <string name="app_name" translatable="false">Signapse</string>
    <string name="data_key" translatable="false">de.swp.tsd.trafficsigndetection.data</string>
    <string name="data_gps_key" translatable="false">gps</string>
    <string name="data_history_max_size_key" translatable="false">history_max_size</string>
    <string name="data_warning_threshold" translatable="false">warning_threshold</string>
    <string name="setup_display_name">Setup</string>
    <string name="detector_display_name">Detector</string>
    <string name="settings_display_name">Settings</string>
    <string name="debug_display_name" translatable="false">Debug</string>
    <string name="permission_decline_ask_again">Ask me again!</string>
    <string name="current_speed" translatable="false">%1$s km/h</string>
    <string name="no_speed" translatable="false">~</string>
    <string name="current_timespan">%1$s ago</string>
    <string name="settings_speed_tracker_label">Speed tracking and warning via GPS</string>
    <string name="camera_permission_decline_text">Without camera access traffic sign recognition is not possible.</string>
    <string name="location_permission_decline_text">Without location access showing current speed and speed warnings is not possible.</string>
    <string name="rotation" translatable="false">%1$d°</string>
    <string name="current_roll_too_right">Please rotate the device a bit counter-clockwise.</string>
    <string name="current_roll_too_left">Please rotate the device a bit clockwise.</string>
    <string name="current_pitch_too_back">Please rotate the device a bit in direction of the screen.</string>
    <string name="current_pitch_too_front">Please rotate the device a bit in direction of the back.</string>
    <string name="power_hint">For continuous usage please connect your device to a sufficient power source.</string>
    <string name="position_hint">" Please position your phone within a smartphone mount in the center of your windshield."</string>
    <string name="current_rotation_good">The device is set up properly.</string>
    <string name="legal_disclaimer_accept">Accept</string>
    <string name="history_sign_count_border">Maximum number of cards in the sign history</string>
    <string name="history_hint">This setting can have an impact on the quality of the speed warning. A shorter history can cause more errors.</string>
    <string name="warning_threshold_label">Threshold value for speed warnings</string>
    <string name="init_error">The initialization of the TrafficSignAPI failed. Without it traffic sign detection is not possible. Please take a look at the Logcat for more information.</string>
    <string name="cut_off_speed_warning">Smartphone might not be fast enough to detect all traffic signs at current speed!</string>
    <string name="location_permission_decline_text_hint">When activated separate visual warnings are shown for breaking speed limits as well as for breaking the calculated cut-off speed, up to which the correct detection of traffic signs by the device is expected.\nThe cut-off speed can be influenced by the speed of the main processor and thereby by its precautions against overheating.</string>
    <string name="privacy_display_name">Privacy Policy</string>
    <string name="license_display_name">Open Source Licenses</string>
    <string name="license_title_android_sdk" translatable="false">Android SDK</string>
    <string name="privacy_introduction">Because the thoroughly handling of your personal data is important to us, we would like to transparently reveal to you the collection, handling and usage of personal data in this App.</string>
    <string name="publisher_label">Publisher</string>
    <string name="publisher">Florian Köhler\nAm Helmholtzring 4c\n98693 Ilmenau\nGermany\nsignapse.app@gmail.com</string>
    <string name="privacy_data_collection_label">1. Data Collection and Handling</string>
    <string name="privacy_data_collection">The only purpose of every data collection, handling and usage is for the detection of traffic signs as well as for the evaluation of the current speed for corresponding promts, hints and warnings within the app. All of the collected personal data does only get processed locally (meaning on your device) and will get saved at most until the app gets shut down. This data will not get transmissioned to the publisher or any third party through this app. Below the collected personal data should precisely be named and its handling, usage and storage be explained.</string>
    <string name="privacy_camera_data_label">1.1 Camera Data</string>
    <string name="privacy_camera_data">For the detection of traffic signs we need access to the main camera of your device. After your agreement at the runtime of the app pictures will periodically be taken and algortihmns will analyze them locally on your device for traffic signs. If there is no standard graphic available for a detected sign, then a cutout from the analysed picture in the detected area will get saved for display. When all detected signs are prepared, the processing of the captured picture is finished and it will get discarded. Captured images that do not get analysed will be discared before the next picture is analysed without further usage. There will be no display of complete captured pictures. Only the extracted cutouts will get displayed. They will get saved at most until the app gets shut down and will then get discarded as well. There is no transmission of complete pictures or cutouts to the publisher or any third party through this app.</string>
    <string name="privacy_location_data_label">1.2 Location Data</string>
    <string name="privacy_location_data">For the determination of the current speed we need access to the location data of your device via GPS. After your optional agreement at the runtime of the app location data will periodically be gathered and saved with the corresponding timestamp. Those location data are directly only used for the calculation of the approximated current speed and will at most be saved until the app gets shut down and then be discarded. The speed data calculated from collected location data are used for direct display on screen as well as for warnings for breaking the speed limit or exceeding the cut-off speeds. Calculated speed data is at most saved until the app gets shut down and will then be discarded. There is no transmission of location or speed data to the publisher or any third party through this app.</string>
    <string name="privacy_revocation_label">3. Revocation</string>
    <string name="privacy_revocation">According to section 13(2) sentence 4 of the German Telemedia Act you have the right for revocation of your acceptance of this privacy policy. For revocation please navigate to the app list in the devices system settings, search for this App its info page, go to storage and click Clear Data. After this you can uninstall the app from your device.</string>
    <string name="disclosure_introduction">For the sake of completeness we would like to disclose to you separately from the privacy policy the  collection, handling and usage of personal data in this App. At least the first time before any personal data will get collected by this App you will be prompted by a permission request to allow or prohibit us access to the specifically named data.</string>
    <string name="privacy_basis_label">2. Legal Basis</string>
    <string name="privacy_basis">The legal basis for the previously described handling of your personal data is your acceptance of this privacy policy conformable to article 6 paragraph 1 sentence 1 literra a of the General Data Protection Regulation.</string>
</resources>