<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/disclosureIntroductionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/disclosure_introduction"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataCollectionLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_4x"
        android:text="@string/privacy_data_collection_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclosureIntroductionTextView" />

    <TextView
        android:id="@+id/dataCollectionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_2x"
        android:layout_marginTop="@dimen/base_2x"
        android:text="@string/privacy_data_collection"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/dataCollectionLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/dataCollectionLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/dataCollectionLabelTextView" />


    <TextView
        android:id="@+id/cameraDataLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_4x"
        android:text="@string/privacy_camera_data_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataCollectionTextView" />

    <TextView
        android:id="@+id/cameraDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_2x"
        android:layout_marginTop="@dimen/base_2x"
        android:text="@string/privacy_camera_data"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cameraDataLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/cameraDataLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/cameraDataLabelTextView" />


    <TextView
        android:id="@+id/locationDataLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_4x"
        android:text="@string/privacy_location_data_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraDataTextView" />

    <TextView
        android:id="@+id/locationDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_2x"
        android:layout_marginTop="@dimen/base_2x"
        android:text="@string/privacy_location_data"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/locationDataLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/locationDataLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/locationDataLabelTextView" />

</android.support.constraint.ConstraintLayout>